# cells

./: CMakeLists.txt  Makefile  README.md
misc/: Makefile  session.vim  todo.txt
src/: CMakeLists.txt  Grid.cpp  Grid.h  ImageMaker.cpp  ImageMaker.h  Ruleset.cpp  Ruleset.h  Run.h  Simulator.cpp  Simulator.h  common.h  main.cpp
